# onion

./: .gitignore  .gittoken_  .release_token  CMakeLists.txt  README.md  build_windows.bat  get_onion.bat  onion  onion_mac
.circleci/: config.yml
src/: configuration.cpp  configuration.h  configurationInteractive.cpp  git.cpp  main.cpp  solutionGenerator.cpp  solutionGenerator.h  solutionGeneratorCMAKE.cpp  solutionGeneratorCMAKE.h  solutionGeneratorVS.cpp  solutionGeneratorVS.h  src.args.json  src.vcxproj  src.vcxproj.filters  toolAutoRelease.cpp  toolAutoRelease.h  toolBuild.cpp  toolConfigure.cpp  toolEmbed.cpp  toolGlueFiles.cpp  toolLibrary.cpp  toolMake.cpp  toolReflection.cpp  toolRelease.cpp  utils.cpp  utils.h
